[package]
name = "dioxus-radio"
version = "0.3.0-rc.0"
edition = "2021"
description = "Fully-typed global state management with a topics subscription system for Dioxus 🧬"
readme = "./README.md"
homepage = "https://github.com/dioxus-community/dioxus-radio"
repository = "https://github.com/dioxus-community/dioxus-radio"
keywords = ["dioxus"]
categories = ["gui"]
license = "MIT"

[dependencies]
dioxus-lib = { version = "0.6.0-rc.0", default-features = false, features = ["macro", "hooks", "signals"] }
generational-box = "0.6.0-rc.0"

[dev-dependencies]
dioxus = { version = "0.6.0-rc.0", features = ["desktop"] }