[package]
name = "dioxus-radio"
version = "0.7.1"
edition = "2021"
description = "Fully-typed global state management with a topics subscription system for Dioxus 🧬"
readme = "./README.md"
homepage = "https://github.com/dioxus-community/dioxus-radio"
repository = "https://github.com/dioxus-community/dioxus-radio"
keywords = ["dioxus"]
categories = ["gui"]
license = "MIT"

[features]
tracing = ["dep:tracing", "dep:itertools"]

[dependencies]
dioxus = { version = "0.7", default-features = false, features = ["macro", "hooks", "signals"] }

# Logging
itertools = { version = "0.14.0", optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
